[workspace]
members = [
  "dataloader-util",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-backtrace = "0.2"
async-trait = "0.1"
convert_case = "0.6"
cfg-if = "1.0"
darling = "0.20"
dataloader-util-core.path = "core"
dataloader-util-proc-macros.path = "proc-macros"
derivative = "2.2"
derive_more = { version = "1.0", features = ["as_ref", "deref", "deref_mut", "display", "from", "into"] }
futures = "0.3"
itertools = "0.13"
opentelemetry = { version = "0.27", default-features = false, features = ["trace"] }
proc-macro2 = "1.0"
quote = "1.0"
scoped-futures = "0.1"
syn = { version = "2.0", features = ["extra-traits", "printing"] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
