[package]
name = "dataloader-util-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-backtrace.workspace = true
async-trait.workspace = true
dataloader-util-proc-macros.workspace = true
futures.workspace = true
itertools.workspace = true
scoped-futures.workspace = true

