[package]
name = "dataloader-util-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-backtrace.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
dataloader-util-proc-macros.workspace = true
derivative.workspace = true
derive_more.workspace = true
futures.workspace = true
itertools.workspace = true
scoped-futures.workspace = true

opentelemetry = { workspace = true, optional = true, features = ["trace"] }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
tracing = ["dep:opentelemetry", "dep:tracing", "dep:tracing-opentelemetry"]
unstable = []
