[package]
name = "dataloader-util"
version.workspace = true
edition.workspace = true

[dependencies]
dataloader-util-core.workspace = true
dataloader-util-proc-macros.workspace = true

[features]
tracing = ["dataloader-util-core/tracing", "dataloader-util-proc-macros/tracing"]
unstable = ["dataloader-util-core/unstable"]
