[package]
name = "dataloader-util"
version.workspace = true
edition.workspace = true

[dependencies]
dataloader-util-core.workspace = true
dataloader-util-proc-macros.workspace = true

[features]
tracing = ["dataloader-util-core/tracing", "dataloader-util-proc-macros/tracing"]
tracing-debug = ["dataloader-util-core/tracing-debug"]
tracing-error = ["dataloader-util-core/tracing-error"]
tracing-info = ["dataloader-util-core/tracing-info"]
tracing-trace = ["dataloader-util-core/tracing-trace"]
tracing-warn = ["dataloader-util-core/tracing-warn"]
