[package]
name = "dataloader-util-proc-macros"
version.workspace = true
edition.workspace = true

[dependencies]
async-backtrace.workspace = true
convert_case.workspace = true
derivative.workspace = true
derive_more.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true

[features]
tracing = []
