[package]
name = "dataloader-util-proc-macros"
version.workspace = true
edition.workspace = true

[dependencies]
darling.workspace = true
derive_more.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true

[features]
tracing = []
